[gd_scene load_steps=7 format=3 uid="uid://1hnoh3dfe6hp"]

[ext_resource type="PackedScene" uid="uid://cnemvuq4712kt" path="res://submarine.tscn" id="1_pdhn7"]
[ext_resource type="Texture2D" uid="uid://bqmltib1gqkeq" path="res://art/Levels/1.png" id="1_u6ig5"]
[ext_resource type="Script" path="res://spawn_fish.gd" id="2_okg1x"]

[sub_resource type="Curve2D" id="Curve2D_sp0ak"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 4, 126, 0, 0, 0, 0, 212, 43, 0, 0, 0, 0, 1290, 143, 0, 0, 0, 0, 2565, 105)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_qvx27"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2564, 256, 0, 0, 0, 0, 2491.59, 424.333, 0, 0, 0, 0, 1961.88, 459.333, 0, 0, 0, 0, 1192.14, 281.833, 0, 0, 0, 0, 307.07, 393.5, 0, 0, 0, 0, 4, 276)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_258jv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 421, -35.3176, -166.497, 35.3176, 166.497, 209, 561, 100.908, -211.906, -100.908, 211.906, 514, 448, 556.673, 136.225, -556.673, -136.225, 619.155, 725, 0, 0, 0, 0, 1007.86, 725, 563.401, 139.589, -563.401, -139.589, 1314.24, 426, -272.45, 289.268, 272.45, -289.268, 1523.44, 649, 289.268, -198.452, -289.268, 198.452, 1939.15, 559, 0, 0, 0, 0, 2192, 609, 262.36, -264.041, -262.36, 264.041, 2395.34, 589, 0, 0, 0, 0, 2560, 598)
}
point_count = 11

[node name="Level1" type="Node2D"]

[node name="submarine" parent="." instance=ExtResource("1_pdhn7")]
position = Vector2(287, 960)

[node name="spawn_fish" type="Node2D" parent="."]
z_index = 1
script = ExtResource("2_okg1x")

[node name="Path2D_1" type="Path2D" parent="spawn_fish"]
position = Vector2(1.00898, 0)
scale = Vector2(0.747755, 1)
curve = SubResource("Curve2D_sp0ak")

[node name="PathFollow2D" type="PathFollow2D" parent="spawn_fish/Path2D_1"]
position = Vector2(4, 126)
rotation = -0.379677

[node name="Path2D_2" type="Path2D" parent="spawn_fish"]
position = Vector2(1.01719, -51.2)
scale = Vector2(0.745703, 1.2)
curve = SubResource("Curve2D_qvx27")

[node name="PathFollow2D" type="PathFollow2D" parent="spawn_fish/Path2D_2"]
position = Vector2(2564, 256)
rotation = 1.97703

[node name="Path2D_3" type="Path2D" parent="spawn_fish"]
position = Vector2(0.259086, 0)
scale = Vector2(0.740914, 1)
curve = SubResource("Curve2D_258jv")

[node name="PathFollow2D" type="PathFollow2D" parent="spawn_fish/Path2D_3"]
position = Vector2(1, 421)
rotation = 0.592427

[node name="spawn_timer" type="Timer" parent="spawn_fish"]

[node name="money_fish_spawn_timer" type="Timer" parent="spawn_fish"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 151.0
offset_bottom = 88.0
texture = ExtResource("1_u6ig5")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Rock1" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(207, 205)
polygon = PackedVector2Array(62, -101, 66, -92, 51, -70, 45, -48, 45, -22, 50, 10, 57, 31, 67, 65, 76, 94, 82, 106, 79, 126, 75, 153, 59, 168, 42, 172, 2, 165, -24, 146, -45, 113, -51, 74, -48, 28, -42, -19, -26, -63, -1, -96, 20, -107, 45, -105)

[node name="Rock2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(646, 462)
polygon = PackedVector2Array(12, -2, 39, 3, 54, 9, 72, 12, 88, 21, 98, 36, 106, 49, 112, 72, 115, 102, 114, 127, 102, 156, 88, 177, 66, 196, 37, 208, 23, 214, -42, 213, -78, 208, -120, 197, -143, 182, -156, 170, -162, 144, -158, 113, -143, 73, -118, 37, -98, 20, -71, 8, -48, 2, -22, -1)

[node name="Rock3" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(1610, 159)
polygon = PackedVector2Array(11, 1, 65, 1, 97, 4, 136, 18, 168, 36, 206, 58, 221, 77, 233, 94, 238, 108, 239, 146, 240, 165, 238, 188, 232, 212, 227, 231, 216, 249, 206, 259, 189, 259, 171, 244, 147, 217, 126, 196, 104, 182, 83, 171, 62, 168, 38, 165, -25, 165, -37, 168, -73, 168, -103, 168, -125, 180, -138, 201, -150, 228, -171, 247, -196, 254, -211, 255, -231, 253, -249, 239, -257, 213, -262, 188, -260, 157, -250, 124, -228, 85, -206, 43, -197, 31, -181, 23, -154, 16, -117, 7, -91, 4, -59, 2)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(1191, 721)
polygon = PackedVector2Array(12, -1, 30, 5, 39, 10, 49, 20, 57, 33, 69, 56, 76, 69, 81, 83, 84, 95, 90, 108, 96, 131, 109, 145, 121, 164, 134, 181, 140, 193, 140, 207, 138, 223, 133, 236, 123, 245, 115, 248, 4, 247, -53, 244, -77, 239, -99, 229, -112, 222, -116, 206, -113, 181, -107, 156, -97, 133, -81, 99, -61, 57, -49, 33, -33, 10, -22, 0, -1, 0)

[connection signal="timeout" from="spawn_fish/money_fish_spawn_timer" to="spawn_fish" method="_on_money_fish_spawn_timer_timeout"]
